add basic file structure for admin categories

--- a/src/app/+profile/profile.component.html
+++ b/src/app/+profile/profile.component.html
@@ -4,4 +4,5 @@
         <li> <a routerLink="/mytasks" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">My tasks</a></li>
     </ul>
 </mat-toolbar>
-<app-user-profile></app-user-profile>
+<!-- <app-user-profile></app-user-profile> -->
+<app-a-categories></app-a-categories>
