--- a/src/app/+profile/admin-categories/A-categories-list.component.html
+++ b/src/app/+profile/admin-categories/A-categories-list.component.html
@@ -1,5 +1,5 @@
 <mat-list>
-    <mat-list-item> Pepper </mat-list-item>
-    <mat-list-item> Salt </mat-list-item>
-    <mat-list-item> Paprika </mat-list-item>
+    <div *ngFor="let category of categories">
+            <mat-list-item> {{category.name}} </mat-list-item>
+    </div>
 </mat-list>
