--- a/src/app/+profile/profile.component.html
+++ b/src/app/+profile/profile.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
     <ul>
         <li> <a routerLink="/profile" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">Profile</a></li>
-        <li> <a routerLink="/mytasks" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">My tasks</a></li>
+        <li> <a routerLink="/my-tasks" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">My tasks</a></li>
     </ul>
 </mat-toolbar>
 <!-- <app-user-profile></app-user-profile> -->
