added decline dialog

--- a/src/app/dialogs/delete/delete-dialog.component.html
+++ b/src/app/dialogs/delete/delete-dialog.component.html
@@ -5,8 +5,9 @@
         <p></p>
         Title: {{data.title}}
         <p></p>
-        State: {{data.state}}
+        Date: {{data.date | date}}
         <p></p>
+
     </div>
 
     <div mat-dialog-actions>
