--- a/src/app/+tasks/tasks-list-manager/tasks-list-manager.component.html
+++ b/src/app/+tasks/tasks-list-manager/tasks-list-manager.component.html
@@ -1,40 +1,34 @@
 <h2>
     Tasks of Manager
 </h2>
-
-
-
     <mat-form-field>
         <mat-label>Category</mat-label>
         <mat-select (selectionChange)="onSelectCategory($event.value)" multiple>
-            <mat-option *ngFor="let category of categories" [value]="category.id">
-                {{category.name}}
+            <mat-option *ngFor="let category of categories" [value]="category?.id">
+                {{category?.name}}
             </mat-option>
         </mat-select>
     </mat-form-field>
 
-
-
-
 <mat-table [dataSource]="tasksDataSource">
     <ng-container matColumnDef="title">
         <mat-header-cell *matHeaderCellDef> Title </mat-header-cell>
-        <mat-cell *matCellDef="let task"> {{task.title}} </mat-cell>
+        <mat-cell *matCellDef="let task"> {{task?.title}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="category">
         <mat-header-cell *matHeaderCellDef> Category </mat-header-cell>
-        <mat-cell *matCellDef="let task"> {{task.Category.name}} </mat-cell>
+        <mat-cell *matCellDef="let task"> {{task?.Category?.name}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="createdAt">
         <mat-header-cell *matHeaderCellDef> Date of Creating </mat-header-cell>
-        <mat-cell *matCellDef="let task"> {{task.createdAt}} </mat-cell>
+        <mat-cell *matCellDef="let task"> {{task?.createdAt | date}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="firstLastName">
         <mat-header-cell *matHeaderCellDef> Name of User </mat-header-cell>
-        <mat-cell *matCellDef="let task"> {{task.firstLastName}} </mat-cell>
+        <mat-cell *matCellDef="let task"> {{task?.firstLastName}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="actions">
