add new categories

--- a/src/app/+profile/admin-categories/A-addNew-category.component.html
+++ b/src/app/+profile/admin-categories/A-addNew-category.component.html
@@ -19,6 +19,6 @@
             </div>
         </mat-error>
     </mat-form-field>
-    <button mat-button color="primary" [disabled]="newCategoryForm.invalid" (click)="onSave()">Save</button>
+    <button mat-button color="primary" [disabled]="newCategoryForm.invalid" (click)="onAdd()">Save</button>
     <button mat-button color="primary" (click)="onCancel()">Cancel</button>
 </form>
