--- a/src/app/+profile/admin-categories/A-categories-list.component.html
+++ b/src/app/+profile/admin-categories/A-categories-list.component.html
@@ -2,7 +2,7 @@
     <div *ngFor="let statistic of statistics">
         <mat-list-item>
             <div>
-                {{statistic.Category.name}} |
+                {{statistic.name}} |
                 All tasks: {{statistic.all}} |
                 Opened: {{statistic.open}}
             </div>
