--- a/src/app/+user/users-list-admin/users-list-admin.component.html
+++ b/src/app/+user/users-list-admin/users-list-admin.component.html
@@ -1,5 +1,4 @@
 
-
 <mat-table [dataSource]="userDataSource">
     <ng-container matColumnDef="firstName">
         <mat-header-cell *matHeaderCellDef> First Name </mat-header-cell>
@@ -46,31 +45,24 @@
         <mat-cell *matCellDef="let user"> Decline </mat-cell>
     </ng-container>
 
-    <!-- <ng-container matColumnDef="role">
-        <mat-header-cell *matHeaderCellDef> Role </mat-header-cell>
-        <mat-cell *matCellDef="let user"> {{roles[user.roleId]}} </mat-cell>
-    </ng-container> -->
-
     <ng-container matColumnDef="role">
         <mat-header-cell *matHeaderCellDef> Role </mat-header-cell>
         <mat-cell *matCellDef="let user">
-            <mat-form-field>
-                <mat-select (selectionChange)="onSelectRole($event.value)" > 
-                    <mat-option *ngFor="let key of keysOfRoles" [value]="key">
-                        {{roles[key]}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+            <select [value]="user.roleId" (change)="onSelectRole($event.target.value, user, user.id)">
+                <option *ngFor="let key of keysOfRoles" [value]="key">
+                    {{roles[key]}}
+                </option>
+            </select>
         </mat-cell>
     </ng-container>
 
-    <ng-container  matColumnDef="actions" >
+    <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
         <mat-cell *matCellDef="let user">
-            <button mat-button (click)="saveUser(user)">
+            <button mat-button (click)="saveUser(currentUser)" [disabled]="user.id !== userId">
                 Save
             </button>
-            <button mat-button (click)="cancelEdit()">
+            <button mat-button (click)="cancelEdit()" [disabled]="user.id !== userId">
                 Cancel
             </button>
         </mat-cell>
