start to made list more stupid

--- a/src/app/+profile/admin-categories/A-categories-list.component.html
+++ b/src/app/+profile/admin-categories/A-categories-list.component.html
@@ -6,8 +6,8 @@
                 All tasks: {{statistic.all}} |
                 Opened: {{statistic.open}}
             </div>
-            <button mat-button color="primary" (click)="onEdit(statistic.Category.name)">Rename</button>
-            <button mat-button color="primary" (click)="onDelete(statistic.Category.name)">Delete</button>
+            <button mat-button color="primary" (click)="onEdit(statistic.id)">Rename</button>
+            <button mat-button color="primary" (click)="onDelete(statistic.name)">Delete</button>
         </mat-list-item>
     </div>
 </mat-list>
