--- a/src/app/+profile/admin-categories/A-categories.component.html
+++ b/src/app/+profile/admin-categories/A-categories.component.html
@@ -2,6 +2,6 @@
     <mat-card-title>
         Catagories
     </mat-card-title>
-    <app-categories-list></app-categories-list>
+    <app-categories-list [statistics]="statistics"></app-categories-list>
     <app-add-categories></app-add-categories>
 </mat-card>
