finish with lists

--- a/src/app/+profile/admin-categories/A-categories-list.component.html
+++ b/src/app/+profile/admin-categories/A-categories-list.component.html
@@ -7,7 +7,7 @@
                 Opened: {{statistic.open}}
             </div>
             <button mat-button color="primary" (click)="onEdit(statistic.id)">Rename</button>
-            <button mat-button color="primary" (click)="onDelete(statistic.name)">Delete</button>
+            <button mat-button color="primary" (click)="onDelete(statistic.id)">Delete</button>
         </mat-list-item>
     </div>
 </mat-list>
