--- a/src/app/+profile/admin-categories/A-categories.component.html
+++ b/src/app/+profile/admin-categories/A-categories.component.html
@@ -3,5 +3,5 @@
         Catagories
     </mat-card-title>
     <app-categories-list [statistics]="statistics" (rename)="onRename($event)" (delete)="onDelete($event)" ></app-categories-list>
-    <app-add-categories></app-add-categories>
+    <app-add-categories (addNewCategory)="onAddNew($event)"></app-add-categories>
 </mat-card>
