--- a/src/app/+profile/profile.component.html
+++ b/src/app/+profile/profile.component.html
@@ -1,8 +1,7 @@
 <mat-toolbar>
     <ul>
-        <li> <a routerLink="/profile" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">Profile</a></li>
-        <li> <a routerLink="/my-tasks" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">My tasks</a></li>
+        <li> <a routerLink="user" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">Profile</a></li>
+        <li> <a routerLink="my-tasks" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">My tasks</a></li>
     </ul>
 </mat-toolbar>
-<!-- <app-user-profile></app-user-profile> -->
-<app-a-categories></app-a-categories>
+<router-outlet></router-outlet>
