--- a/src/app/+user/users-list-admin/users-list-admin.component.html
+++ b/src/app/+user/users-list-admin/users-list-admin.component.html
@@ -1,4 +1,4 @@
-
+<h2>Users</h2>
 <mat-table [dataSource]="userDataSource">
     <ng-container matColumnDef="firstName">
         <mat-header-cell *matHeaderCellDef> First Name </mat-header-cell>
@@ -15,34 +15,70 @@
         <mat-cell *matCellDef="let user"> {{user?.createdAt | date}} </mat-cell>
     </ng-container>
 
-    <!-- <ng-container matColumnDef="allTasks">
+    <ng-container matColumnDef="allTasks">
         <mat-header-cell *matHeaderCellDef> All Tasks </mat-header-cell>
-        <mat-cell *matCellDef="let user"> {{user.allTasks}} </mat-cell>
-    </ng-container> -->
+        <mat-cell *matCellDef="let user">
+            <div *ngFor="let status of user.Tasks; let i = index">
+                <p>
+                    {{status.countTasks}}+
+                </p>
+            </div>
+        </mat-cell>
+    </ng-container>
 
     <ng-container matColumnDef="onReview">
         <mat-header-cell *matHeaderCellDef> On Review </mat-header-cell>
-        <mat-cell *matCellDef="let user"> On Review </mat-cell>
+        <mat-cell *matCellDef="let user">
+            <div *ngFor="let status of user.Tasks">
+                <p *ngIf="status.status === 1">
+                    {{status.countTasks}}
+                </p>
+            </div>
+        </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="open">
         <mat-header-cell *matHeaderCellDef> Open </mat-header-cell>
-        <mat-cell *matCellDef="let user"> Open </mat-cell>
+        <mat-cell *matCellDef="let user">
+            <div *ngFor="let status of user.Tasks">
+                <p *ngIf="status.status === 2">
+                    {{status.countTasks}}
+                </p>
+            </div>
+        </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="pending">
         <mat-header-cell *matHeaderCellDef> Pending </mat-header-cell>
-        <mat-cell *matCellDef="let user"> Pending </mat-cell>
+        <mat-cell *matCellDef="let user">
+            <div *ngFor="let status of user.Tasks">
+                <p *ngIf="status.status === 3">
+                    {{status.countTasks}}
+                </p>
+            </div>
+        </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="done">
         <mat-header-cell *matHeaderCellDef> Done </mat-header-cell>
-        <mat-cell *matCellDef="let user"> Done </mat-cell>
+        <mat-cell *matCellDef="let user">
+            <div *ngFor="let status of user.Tasks">
+                <p *ngIf="status.status === 4">
+                    {{status.countTasks}}
+                </p>
+            </div>
+        </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="decline">
         <mat-header-cell *matHeaderCellDef> Decline </mat-header-cell>
-        <mat-cell *matCellDef="let user"> Decline </mat-cell>
+        <mat-cell *matCellDef="let user">
+            <div *ngFor="let status of user.Tasks">
+                <p *ngIf="status.status === 5">
+                    {{status.countTasks}}
+                </p>
+            </div>
+        </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="role">
@@ -59,10 +95,10 @@
     <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
         <mat-cell *matCellDef="let user">
-            <button mat-button (click)="saveUser(currentUser)" [disabled]="user.id !== userId">
+            <button mat-button (click)="saveUser(user)" [disabled]="user.id !== userId">
                 Save
             </button>
-            <button mat-button (click)="cancelEdit()" [disabled]="user.id !== userId">
+            <button mat-button (click)="cancelEdit(user)" [disabled]="user.id !== userId">
                 Cancel
             </button>
         </mat-cell>
