--- a/src/app/dialogs/info-task/info-task-dialog.component.html
+++ b/src/app/dialogs/info-task/info-task-dialog.component.html
@@ -1,15 +1,15 @@
 <div class="container">
     <h3 mat-dialog-title>Info about task</h3>
     <div mat-dialog-content>
-        Title: {{data.task.title}}
+        Title: {{data.title}}
         <p></p>
-        Description: {{data.task.description}}
+        Description: {{data.description}}
         <p></p>
-        Poeple: {{data.task.people}}
+        Poeple: {{data.people}}
         <p></p>
-        Price: {{data.task.price}}
+        Price: {{data.price}}
         <p></p>
-        When: {{data.task.date}}
+        When: {{data.date}}
         <p></p>
         Category: {{data?.task?.Category?.name}}
     </div>
