--- a/src/app/+tasks/tasks-table/tasks-table.component.html
+++ b/src/app/+tasks/tasks-table/tasks-table.component.html
@@ -31,13 +31,13 @@
     </mat-form-field>
 
     <mat-form-field *ngIf="isAdmin">
-            <mat-label>User</mat-label>
-            <mat-select formControlName="userId" (selectionChange)="onSelectUser($event.value)" multiple>
-                <mat-option *ngFor="let user of users" [value]="user.id">
-                    {{user.firstName}} {{user.lastName}} {{user.email}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
+        <mat-label>User</mat-label>
+        <mat-select formControlName="userId" (selectionChange)="onSelectUser($event.value)" multiple>
+            <mat-option *ngFor="let user of users" [value]="user.id">
+                {{user.firstName}} {{user.lastName}} {{user.email}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
 
     <mat-form-field>
         <mat-label>Range of Finish Task:</mat-label>
@@ -95,11 +95,11 @@
     <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
         <mat-cell *matCellDef="let task">
-            <button mat-button (click)="editTask(task)">
-                Edit
+            <button mat-icon-button (click)="editTask(task)">
+                <mat-icon color="primary">edit</mat-icon>
             </button>
-            <button mat-button (click)="deleteTask(task)">
-                Delete
+            <button mat-icon-button (click)="deleteTask(task)">
+                <mat-icon color="primary">delete</mat-icon>
             </button>
         </mat-cell>
     </ng-container>
@@ -107,15 +107,15 @@
     <div *ngIf="isAdmin then adminBlock else myBlock"> </div>
 
     <ng-template #adminBlock>
-            <mat-header-row *matHeaderRowDef="displayedColumnsAdmin; sticky: true"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumnsAdmin;" infiniteScroll [infiniteScrollDistance]="4"
-        [infiniteScrollThrottle]="50" (scrolled)="onScroll()"></mat-row>
+        <mat-header-row *matHeaderRowDef="displayedColumnsAdmin; sticky: true"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumnsAdmin;" infiniteScroll [infiniteScrollDistance]="4"
+            [infiniteScrollThrottle]="50" (scrolled)="onScroll()"></mat-row>
     </ng-template>
 
     <ng-template #myBlock>
-            <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;" infiniteScroll [infiniteScrollDistance]="4"
-        [infiniteScrollThrottle]="50" (scrolled)="onScroll()"></mat-row>
+        <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;" infiniteScroll [infiniteScrollDistance]="4"
+            [infiniteScrollThrottle]="50" (scrolled)="onScroll()"></mat-row>
     </ng-template>
-    
+
 </mat-table>
