--- a/src/app/+user/users-list-admin/users-list-admin.component.html
+++ b/src/app/+user/users-list-admin/users-list-admin.component.html
@@ -71,10 +71,11 @@
     <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
         <mat-cell *matCellDef="let user">
-            <button mat-button (click)="saveUser(user)" [disabled]="user.id !== userId">
+            <button mat-button (click)="saveUser(user)" [disabled]="user.id !== userId" mat-raised-button color="primary">
                 Save
             </button>
-            <button mat-button (click)="cancelEdit(user)" [disabled]="user.id !== userId">
+            
+            <button mat-button (click)="cancelEdit(user)" [disabled]="user.id !== userId" mat-raised-button color="primary">
                 Cancel
             </button>
         </mat-cell>
