--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,5 +1,5 @@
-@import '../../../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
-@import "../../../node_modules/ng-pick-datetime//assets//style//picker.min.css";
+/* @import '../../../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
+@import "../../../node_modules/ng-pick-datetime//assets//style//picker.min.css"; */
 
 /* @import '@angular/material/prebuilt-themes/indigo-pink.css'; */
 
