--- a/src/app/+tasks/tasks-list-manager/tasks-list-manager.component.html
+++ b/src/app/+tasks/tasks-list-manager/tasks-list-manager.component.html
@@ -34,7 +34,7 @@
     <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
         <mat-cell *matCellDef="let task">
-            <button mat-button (click)="showInfoTask(task)">
+            <button mat-raised-button color="primary" (click)="showInfoTask(task)">
                 View Task
             </button>
         </mat-cell>
