--- a/src/app/dialogs/delete/delete-dialog.component.html
+++ b/src/app/dialogs/delete/delete-dialog.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div mat-dialog-actions>
-        <button mat-button [mat-dialog-close]="1" (click)="confirmDelete()">Delete</button>
-        <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
+        <button mat-raised-button color="primary" [mat-dialog-close]="1" (click)="confirmDelete()">Delete</button>
+        <button mat-raised-button color="primary" (click)="onNoClick()" tabindex="-1">Cancel</button>
     </div>
 </div>
