--- a/src/app/+profile/admin-categories/A-categories-list.component.html
+++ b/src/app/+profile/admin-categories/A-categories-list.component.html
@@ -1,3 +1,4 @@
+<mat-card-content>
 <mat-list>
     <div *ngFor="let statistic of statistics">
         <mat-list-item>
@@ -11,3 +12,4 @@
         </mat-list-item>
     </div>
 </mat-list>
+<mat-card-content>
