--- a/src/app/+tasks/tasks.component.html
+++ b/src/app/+tasks/tasks.component.html
@@ -1,9 +1,11 @@
-<ul>
-        <li> <a routerLink="/categories" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">all</a></li>
-        <div *ngFor="let category of categories">
-                <li> <a routerLink="/categories/{{category.id}}" routerLinkActive="active">{{category.name}}</a></li>
-        </div>
-</ul>
+<mat-toolbar>
+        <ul>
+                <li> <a routerLink="/categories" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">all</a></li>
+                <div *ngFor="let category of categories">
+                        <li> <a routerLink="/categories/{{category.id}}" routerLinkActive="active">{{category.name}}</a></li>
+                </div>
+        </ul>
+</mat-toolbar>
 <div infiniteScroll [infiniteScrollDistance]="4" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
         <app-task [tasks]="tasks" (accept)="onAccept($event)"></app-task>
 </div>
