--- a/src/app/+tasks/tasks.components.css
+++ b/src/app/+tasks/tasks.components.css
@@ -4,8 +4,6 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    /* position: fixed; */
-    /* top: 0; */
     width: 100%;
 }
 
@@ -27,4 +25,7 @@ li a:hover:not(.active) {
 
 .active {
     background-color: Orange;
+}
+mat-toolbar {
+    padding: 0px;
 }
