another css improvements

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -3,4 +3,6 @@
 
 /* @import '@angular/material/prebuilt-themes/indigo-pink.css'; */
 
-
+* {
+    font-family: Roboto,"Helvetica Neue",sans-serif;
+}
