--- a/src/app/+profile/admin-categories/A-addNew-category.component.html
+++ b/src/app/+profile/admin-categories/A-addNew-category.component.html
@@ -1,7 +1,5 @@
-<mat-card-title>
-    New Catagory
-</mat-card-title>
-<mat-card-content>
+<div>
+    <h3>New Catagory</h3>
     <form [formGroup]="newCategoryForm">
         <mat-form-field>
             <mat-label>Name:</mat-label>
@@ -23,4 +21,4 @@
         <button mat-button color="primary" [disabled]="newCategoryForm.invalid" (click)="onAdd()">Save</button>
         <button mat-button color="primary" (click)="newCategoryForm.reset()">Cancel</button>
     </form>
-</mat-card-content>
+</div>
