--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-alert></app-alert>
-<mat-card *ngIf="isLoggedIn$ | async as isLoggedIn">
+<mat-card *ngIf="isLoggedIn$ | async as isLoggedIn" color="primary">
     <mat-grid-list cols="3" rowHeight="30px">
         <mat-grid-tile>
             <mat-menu #appMenu="matMenu">
