fixed show name category in dialog infoAboutTask

--- a/src/app/dialogs/info-task/info-task-dialog.component.html
+++ b/src/app/dialogs/info-task/info-task-dialog.component.html
@@ -11,7 +11,7 @@
         <p></p>
         When: {{data.date}}
         <p></p>
-        Category: {{data?.task?.Category?.name}}
+        Category: {{data?.Category?.name}}
     </div>
 
     <div mat-dialog-actions>
